# advent-of-code-py

./: .gitignore  .pre-commit-config.yaml  README.md  arguments.py  inputs.py  main.py  pyproject.toml  renovate.json  sessions.py  solutions.py
.github/workflows/: renovate.yaml
tests/: 2025.py
tests/2025/: 01.py  02_test.py  03.py  04_test.py  05_test.py  06_test.py  07_test.py  08_test.py  09_test.py  10_test.py  11_test.py  12_test.py
years/2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
