[project]
name = "advent-of-code-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest>=9.0.1", "questionary>=2.1.1", "requests>=2.32.5"]

[tool.pytest]
minversion = "9.0"
pythonpath = ["."]
testpaths = ["tests/**/*.py"]
